# Agentic_AI_Mobile_Recommender

./: README.md  app.py  pyproject.toml  test_recommender.py
